--- a/client/package.json
+++ b/client/package.json
@@ -27,13 +27,18 @@
     "babel-core": "6.1.19",
     "babel-loader": "6.1.0",
     "babel-preset-es2015": "6.1.18",
-    "html-webpack-plugin": "1.6.2",
+    "babel-preset-react": "^6.1.18",
+    "express": "4.13.3",
     "immutable": "3.7.5",
     "react": "0.14.2",
     "react-dom": "0.14.2",
+    "react-redux": "^4.0.0",
     "redux": "3.0.4",
+    "redux-thunk": "1.0.0",
     "webpack": "1.12.4",
     "webpack-configurator": "0.3.0",
+    "webpack-dev-middleware": "1.2.0",
+    "webpack-hot-middleware": "2.5.0",
     "whatwg-fetch": "0.10.1"
   }
 }
