--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "description": "A simple HackerNews application to experiment with Redux and React.",
   "main": "index.js",
   "scripts": {
-    "dev": "node_modules/.bin/webpack"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,7 @@
     "babel-preset-react": "^6.1.18",
     "express": "4.13.3",
     "immutable": "3.7.5",
+    "isomorphic-fetch": "2.2.0",
     "react": "0.14.2",
     "react-dom": "0.14.2",
     "react-redux": "^4.0.0",
@@ -39,6 +40,5 @@
     "webpack-configurator": "0.3.0",
     "webpack-dev-middleware": "1.2.0",
     "webpack-hot-middleware": "2.5.0",
-    "whatwg-fetch": "0.10.1"
   }
 }
