--- a/client/package.json
+++ b/client/package.json
@@ -39,6 +39,6 @@
     "webpack": "1.12.4",
     "webpack-configurator": "0.3.0",
     "webpack-dev-middleware": "1.2.0",
-    "webpack-hot-middleware": "2.5.0",
+    "webpack-hot-middleware": "2.5.0"
   }
 }
