--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-dom": "0.14.2",
     "react-redux": "^4.0.0",
     "redux": "3.0.4",
+    "redux-logger": "2.0.4",
     "redux-thunk": "1.0.0",
     "webpack": "1.12.4",
     "webpack-configurator": "0.3.0",
