--- a/client/package.json
+++ b/client/package.json
@@ -27,13 +27,13 @@
     "babel-core": "6.1.19",
     "babel-loader": "6.1.0",
     "babel-preset-es2015": "6.1.18",
-    "babel-preset-react": "^6.1.18",
+    "babel-preset-react": "6.1.18",
     "express": "4.13.3",
     "immutable": "3.7.5",
     "isomorphic-fetch": "2.2.0",
     "react": "0.14.2",
     "react-dom": "0.14.2",
-    "react-redux": "^4.0.0",
+    "react-redux": "4.0.0",
     "redux": "3.0.4",
     "redux-logger": "2.0.4",
     "redux-thunk": "1.0.0",
