--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "express": "4.13.3",
     "immutable": "3.7.5",
     "isomorphic-fetch": "2.2.0",
+    "moment": "2.10.6",
     "react": "0.14.2",
     "react-dom": "0.14.2",
     "react-redux": "4.0.0",
