--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "babel-loader": "6.1.0",
     "babel-preset-es2015": "6.1.18",
     "babel-preset-react": "6.1.18",
+    "babel-preset-stage-2": "6.1.18",
     "express": "4.13.3",
     "immutable": "3.7.5",
     "isomorphic-fetch": "2.2.0",
