--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,8 @@
   "description": "A simple HackerNews application to experiment with Redux and React.",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "node_modules/.bin/karma start karma.config.js"
   },
   "repository": {
     "type": "git",
@@ -43,5 +44,18 @@
     "webpack-configurator": "0.3.0",
     "webpack-dev-middleware": "1.2.0",
     "webpack-hot-middleware": "2.5.0"
+  },
+  "devDependencies": {
+    "chai": "3.4.1",
+    "karma": "0.13.15",
+    "karma-chai": "0.1.0",
+    "karma-chai-sinon": "0.1.5",
+    "karma-chrome-launcher": "0.2.1",
+    "karma-mocha": "0.2.1",
+    "karma-mocha-reporter": "1.1.1",
+    "karma-webpack": "1.7.0",
+    "mocha": "2.3.4",
+    "sinon": "1.17.2",
+    "sinon-chai": "2.8.0"
   }
 }
