--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "chai": "3.4.1",
+    "fetch-mock": "2.3.0",
     "karma": "0.13.15",
     "karma-chai-sinon": "0.1.5",
     "karma-chrome-launcher": "0.2.1",
@@ -54,6 +55,7 @@
     "karma-mocha-reporter": "1.1.1",
     "karma-webpack": "1.7.0",
     "mocha": "2.3.4",
+    "redux-mock-store": "0.0.2",
     "sinon": "1.17.2",
     "sinon-chai": "2.8.0"
   }
