--- a/client/package.json
+++ b/client/package.json
@@ -51,6 +51,7 @@
     "karma": "0.13.15",
     "karma-chai-sinon": "0.1.5",
     "karma-chrome-launcher": "0.2.1",
+    "karma-ie-launcher": "0.2.0",
     "karma-mocha": "0.2.1",
     "karma-mocha-reporter": "1.1.1",
     "karma-webpack": "1.7.0",
