--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "babel-core": "6.1.19",
     "babel-loader": "6.1.0",
+    "babel-polyfill": "6.2.0",
     "babel-preset-es2015": "6.1.18",
     "babel-preset-react": "6.1.18",
     "babel-preset-stage-2": "6.1.18",
