--- a/client/package.json
+++ b/client/package.json
@@ -27,10 +27,12 @@
   "dependencies": {
     "babel-core": "6.1.19",
     "babel-loader": "6.1.0",
+    "babel-plugin-transform-runtime": "6.1.18",
     "babel-polyfill": "6.2.0",
     "babel-preset-es2015": "6.1.18",
     "babel-preset-react": "6.1.18",
     "babel-preset-stage-2": "6.1.18",
+    "babel-runtime": "6.2.0",
     "express": "4.13.3",
     "immutable": "3.7.5",
     "isomorphic-fetch": "2.2.0",
