--- a/client/package.json
+++ b/client/package.json
@@ -59,6 +59,7 @@
     "karma-mocha-reporter": "1.1.1",
     "karma-webpack": "1.7.0",
     "mocha": "2.3.4",
+    "react-addons-test-utils": "0.14.2",
     "redux-mock-store": "0.0.2",
     "sinon": "1.17.2",
     "sinon-chai": "2.8.0"
